# llamacpp-rn

./: .eslintignore  .eslintrc.js  .gitignore  .gitmodules  ANDROID_INTEGRATION.md  API.md  INTERFACE.md  LlamaCppRn.podspec  PREBUILT.md  README.md  novastera-llamacpp-rn.podspec  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
.github/workflows/: ci.yml  example-test.yml  native-build.yml  publish.yml
android/: README.md  build.gradle  gradle.properties
android/src/main/cpp/: CMakeLists.txt  LlamaCppRnJNI.cpp
android/src/main/cpp/include/: llamacpp_rn.h
android/src/main/java/com/novastera/llamacpprn/: LlamaCppRnModule.java  LlamaCppRnPackage.java  NativeLlamaCppRnSpec.java
android/src/main/jni/: CMakeLists.txt  OnLoad.cpp
cpp/: ChatTemplates.cpp  ChatTemplates.h  LlamaCppModel.cpp  LlamaCppModel.h  LlamaCppRnModule.cpp  LlamaCppRnModule.h  README.md  SystemUtils.cpp  SystemUtils.h  build-info.cpp  ggml-sycl-disabled.h  rn-completion.cpp  rn-llama-integration.md  rn-llama.cpp  rn-llama.hpp  rn-utils.hpp
example/: JsonSchemaTest.js  app.json  index.js  metro.config.js  package-lock.json  package.json  tsconfig.json
example/app/: android-test.tsx  consolidated-test.tsx  index.tsx  llama-schema-test.tsx  llama-simple-test.tsx  llama-test.tsx  model-chat-test.tsx  test-module.tsx
example/app/utils/: model-test-utils.ts
example/assets/: README.md
example/plugins/: withLlamaCppRn.js  withLlamaCppRnAndroid.js
example/scripts/: copy-cpp-files.js  copy-libs.js  copy-models.js  create-temp-headers.js  fix-include-paths.js  prepare-android.js  setup-model.js
ios/LlamaCppRn/: LlamaCppRnModule.h  LlamaCppRnModule.mm
ios/framework/build-apple/llama.xcframework/: Info.plist
ios/framework/build-apple/llama.xcframework/ios-arm64/llama.framework/: llama
ios/framework/build-apple/llama.xcframework/ios-arm64_x86_64-simulator/dSYMs/llama.dSYM/Contents/Resources/Relocations/aarch64/: llama.yml
ios/framework/build-apple/llama.xcframework/ios-arm64_x86_64-simulator/dSYMs/llama.dSYM/Contents/Resources/Relocations/x86_64/: llama.yml
ios/framework/build-apple/llama.xcframework/macos-arm64_x86_64/dSYMs/llama.dSYM/Contents/Resources/Relocations/aarch64/: llama.yml
ios/framework/build-apple/llama.xcframework/macos-arm64_x86_64/dSYMs/llama.dSYM/Contents/Resources/Relocations/x86_64/: llama.yml
ios/framework/build-apple/llama.xcframework/tvos-arm64/dSYMs/llama.dSYM/Contents/Resources/Relocations/aarch64/: llama.yml
ios/framework/build-apple/llama.xcframework/tvos-arm64/llama.framework/: llama
ios/framework/build-apple/llama.xcframework/tvos-arm64_x86_64-simulator/dSYMs/llama.dSYM/Contents/Resources/Relocations/aarch64/: llama.yml
ios/framework/build-apple/llama.xcframework/xros-arm64/dSYMs/llama.dSYM/Contents/Resources/Relocations/aarch64/: llama.yml
ios/include/ReactCommon/: RCTTurboModule.h
ios/libs/build-apple/llama.xcframework/: Info.plist
ios/libs/build-apple/llama.xcframework/ios-arm64/dSYMs/llama.dSYM/Contents/Resources/Relocations/aarch64/: llama.yml
ios/libs/build-apple/llama.xcframework/tvos-arm64_x86_64-simulator/dSYMs/llama.dSYM/Contents/Resources/Relocations/x86_64/: llama.yml
ios/libs/build-apple/llama.xcframework/xros-arm64/llama.framework/: llama
ios/libs/build-apple/llama.xcframework/xros-arm64_x86_64-simulator/dSYMs/llama.dSYM/Contents/Resources/Relocations/aarch64/: llama.yml
ios/libs/build-apple/llama.xcframework/xros-arm64_x86_64-simulator/dSYMs/llama.dSYM/Contents/Resources/Relocations/x86_64/: llama.yml
lib/: index.d.ts  index.js
lib/commonjs/: index.js  index.js.map
lib/commonjs/specs/: LlamaCppRnSpec.js  LlamaCppRnSpec.js.map
lib/module/: index.js  index.js.map
lib/module/specs/: LlamaCppRnSpec.js  LlamaCppRnSpec.js.map
lib/specs/: LlamaCppRnSpec.d.ts  LlamaCppRnSpec.js  NativeLlamaCppRn.d.ts
scripts/: build_android.sh  build_android_external.sh  build_android_gpu_backend.sh  build_apple_external.sh  build_tool_versions.sh  download_prebuilt.sh  llama_cpp_ios.sh  llama_cpp_source.sh  llama_cpp_version.sh  package-prebuilt.sh  setup-android.js  setup-llama-cpp.js  setupLlamaCpp.sh  used_version.sh
scripts/win/: build_android.ps1  build_android_external.ps1  setupLlamaCpp.ps1
specs/: NativeLlamaCppRn.ts
src/: index.tsx
src/specs/: LlamaCppRnSpec.ts  NativeLlamaCppRn.ts
tm/: LlamaCppModel.h  LlamaCppRnModule.cpp  LlamaCppRnModule.h  NativeLlamaCppRn.cpp  NativeLlamaCppRn.d.ts  NativeLlamaCppRn.h  NativeLlamaCppRn.js  SystemUtils.cpp  SystemUtils.h  build-info.cpp  ggml-sycl-disabled.h  rn-utils.hpp
